[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GameUI/Events/ModalEvents/TitlePanelEvents/ClockEvents/ClockEvent.gd" type="Script" id=1]
[ext_resource path="res://Styles/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/GameUI/Events/ModalEvents/TitlePanelEvents/TitlePanelEvent.tscn" type="PackedScene" id=3]

[node name="ClockEvent" instance=ExtResource( 3 )]
script = ExtResource( 1 )

[node name="CenterContainer" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer" index="0"]
margin_right = 304.0
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer" index="0"]
margin_left = 82.0
margin_top = 56.0
margin_right = 222.0
margin_bottom = 96.0
rect_min_size = Vector2( 140, 40 )

[node name="SeparatorLabel" type="Label" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel" index="0"]
margin_left = 9.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = ":"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinuteLabel" type="Label" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel" index="1"]
margin_left = 57.0
margin_top = 11.0
margin_right = 89.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeriodLabel" type="Label" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel" index="2"]
margin_left = 99.0
margin_top = 11.0
margin_right = 131.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "AM"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HourLabel" type="Label" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel" index="3"]
margin_left = 9.0
margin_top = 11.0
margin_right = 41.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTimer" type="Timer" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel" index="4"]
wait_time = 0.8
autostart = true

[node name="ModButton" type="Button" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer" index="0"]
margin_left = 93.0
margin_right = 119.0
margin_bottom = 15.0
focus_mode = 0
text = "Mod"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetButton" type="Button" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer" index="1"]
margin_left = 135.0
margin_right = 158.0
margin_bottom = 15.0
focus_mode = 0
text = "Set"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer" index="2"]
margin_left = 174.0
margin_right = 210.0
text = "Leave"

[connection signal="timeout" from="CenterContainer/EventPanel/MarginContainer/VBoxContainer/BodyContainer/CenterContainer/Panel/FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="pressed" from="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer/ModButton" to="." method="_on_ModButton_pressed"]
[connection signal="pressed" from="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer/SetButton" to="." method="_on_SetButton_pressed"]
